<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RejsekortMobile</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="check_in">Check-in</string>
    <string name="image">image</string>
    <string name="port_">"port: "</string>
    <string name="address_">"address: "</string>
    <string name="leave_geofence">leave geofence</string>
    <string name="add_ssid">add SSID</string>
    <string name="manual_overwrite_checkout">Manual overwrite checkout</string>
    <string name="checking_out">Checking out</string>
    <string name="checking_in">Checking in</string>
    <string name="check_out">Check-out</string>
    <string name="getting_status">Getting Status</string>
    <string name="checked_in">Checked In</string>
    <string name="try_again">Try again</string>

</resources>
